iac/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'  # Explicitly set the listener port to 80
    alb.ingress.kubernetes.io/healthcheck-path: "/healthz"  # Ensure health check path is correct
    alb.ingress.kubernetes.io/backend-protocol: HTTP  # Ensure backend protocol is HTTP
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"  # Use the traffic port for health checks
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /orders
          pathType: Prefix
          backend:
            service:
              name: order
              port:
                number: 80
        - path: /products
          pathType: Prefix
          backend:
            service:
              name: product
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
